k8s/cloud/04-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-fe
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-fe
  template:
    metadata:
      labels:
        app: ecommerce-fe
    spec:
      containers:
        - name: fe
          image: registry.codebyluke.io.vn/ecommerce-badminton/ecommerce-fe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-fe-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce-fe
  ports:
    - port: 80
      targetPort: 3000
