k8s/cloud/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    # Thêm annotation này để tự động chuyển hướng sang HTTPS nếu bạn có SSL
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: ecommerce.codebyluke.io.vn # Domain chuyên nghiệp cho Frontend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-fe-service
                port:
                  number: 80
    - host: api.ecommerce.codebyluke.io.vn # Domain chuyên nghiệp cho API
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-be-service
                port:
                  number: 80
